Fixed a small spacing issue on the footer.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -195,6 +195,7 @@ button:focus {
 
 .member-organizations p {
     color: white;
+    margin-bottom: 20px;
 }
 
 .member-organizations ul {
